# baker

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  changelog.yaml  release.yml
example/template_dir/: .bakerignore  baker.json
examples/import/: baker.yaml
examples/python-package/: .bakerignore  .dockerignore.j2  baker.json  baker.yaml  requirements.txt.j2  {%if create_tests %}tests.py.j2{%endif%}
examples/template_dir/: .dockerignore.j2  baker.json  baker.yaml
hello_world/EWRWER/: main.py
hello_world/SRWER/: main.py
hello_world/hello_name/: main.py
src/: args.rs  bakerfile.rs  bakerignore.rs  cli.rs  cli_hooks.rs  cli_runner.rs  config.rs  constants.rs  dialoguer.rs  error.rs  hooks.rs  ignore.rs  import.rs  ioutils.rs  lib.rs  loader.rs  logger.rs  main.rs  parser.rs  processor.rs  prompt.rs  question.rs  question_prompter.rs  question_renderer.rs  render.rs  renderer.rs  run.rs  template.rs
src/cli/: answers.rs  args.rs  mod.rs  processor.rs  runner.rs
src/config/: loader.rs  mod.rs  question.rs  validation.rs
src/loader/: factory.rs  git.rs  mod.rs
src/prompt/: dialoguer.rs  factory.rs  handler.rs  mod.rs  provider.rs  theme.rs
src/renderer/: interface.rs  minijinja.rs
src/template/: operation.rs  processor.rs
tests/: cli_test.rs  error_test.rs  gitea_integration_tests.rs  hooks_test.rs  ignore_test.rs  loader_integration_tests.rs  parser_test.rs  processor_test.rs  prompt_test.rs  readme_examples_integration_tests.rs  renderer_tests.rs  template_test.rs  utils.rs
(+15 files in other folders)
