[package]
name = "baker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
serde_json = { version = "1.0" }
indexmap = { version = "2.6.0", features = ["serde"] }
minijinja = "1.0"
globset = "0.4.15"
walkdir = "2.3"
git2 = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.9"
url = "2.4.1"
